[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ig-request-cleaner"
version = "0.1.0"
description = "Local manual queue for reviewing and cancelling pending Instagram follow requests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Local Utility" }]
dependencies = []

[project.scripts]
ig-request-cleaner = "ig_request_cleaner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
